--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang= "en" class="fa-events-icons-ready">
 <head>
-  <link rel="shortcut icon" href="favicon.ico"> 
-  <meta charset="UTF-8">
-  <meta name="description" content="Codify Academy's Google Replication">
-  <meta name="keywords" content="Codify Academy, Google Replication">
+ 
+      <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Codify Academy's Google Replication">
+       <meta name="keywords" content="Codify Academy, Google Replication">
   <meta name="author" content= "Dharma Sanjyal @ Codify Academy">
-  <title>Google Replica</title>
-  <script src="https://use.fontawesome.com/9a77ea3aef.js"></script>
+     <title>Google Replica</title>
+     <script src="https://use.fontawesome.com/9a77ea3aef.js"></script>
+    <link rel="shortcut icon" href="favicon.ico"> 
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
