--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <meta name="author" content= "Dharma Sanjyal @ Codify Academy">
      <title>Google Replica</title>
      <script src="https://use.fontawesome.com/9a77ea3aef.js"></script>
+     <!-- Animation for the webpage-->
+     <link rel="stylesheet" href="css/animate.css">
+     <!--bootstrap -->
+     <link rel="stylesheet" href="css/bootstrap.css">
+     <!--favourite icon-->
     <link rel="shortcut icon" href="favicon.ico"> 
+    <!-- bootstrap javascipt-->
+    <link rel="stylesheet" href="js/bootstrap.js">
+    <!-- css file-->
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -46,6 +54,7 @@
     </div>
     </div>
     <!-- Bottom Section - Site Links -->
+  
     <div class="bottom-site-links">
     <!-- Bottom Left Links -->
       <ul class="left-site-links">
@@ -59,6 +68,7 @@
           <a href="https://www.google.com/intl/en/about.html?fg=1">About</a>
         </li>
       </ul>
+
       <!-- Bottom right Links -->
       <ul class="right-site-links">
         <li>
